# mathmodel

./: .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.chatcheck.json  tsconfig.json
agent/: Cargo.toml
agent/src/: file_watcher.rs  main.rs  pty_manager.rs  tabbit.rs  ws_client.rs
app/: globals.css  layout.tsx
app/login/: page.tsx
app/preview/modeler-mark/: page.tsx
app/projects/: page.tsx
app/projects/[id]/: client.tsx  page.tsx
app/projects/[id]/essay/: page.tsx
app/register/: page.tsx
app/search/: page.tsx
components/: tauri-window-icon.tsx
components/arena/: arena-chat.tsx  arena-panel.test.mjs  arena-panel.tsx  equation-editor.tsx  math-field.tsx
components/chat/: agent-card.tsx  chat-branding.test.mjs  chat-panel.tsx  chat-timeline.test.mjs  chat-timeline.ts  modeler-mark.tsx  question-dialog.tsx  task-panel.tsx
components/dashboard/: code-canvas.tsx  main-workspace.tsx  sidebar.tsx
components/editor/: code-editor.tsx  image-viewer.tsx  pdf-document-renderer.tsx  pdf-viewer.test.mjs  pdf-viewer.tsx
components/essay/: essay-backlinks-panel.tsx  essay-comments.tsx  essay-editor.tsx  essay-ghost.ts  essay-loading.test.mjs  essay-outline-panel.tsx  essay-sidebar.tsx  essay-statusbar.tsx  essay-tab-strip.tsx  essay-topbar.tsx  use-essay-collab.ts
components/geo/: etosha-preset.ts  geo-panel.tsx  layer-picker.tsx  leaflet-map.tsx
components/knowledge/: knowledge-base-panel.tsx  knowledge-research-row.tsx
components/layout/: modeler-workbench.tsx
components/research/: agent-cards.test.tsx  agent-cards.tsx  agent-research-view.tsx  research-markdown.tsx
components/search/: search-page.test.mjs  search-page.tsx
components/ui/: scroll-area.tsx  user-avatar.tsx
deploy/: .env.example  Caddyfile  docker-compose.tls.yml  docker-compose.yml
docs/: deployment-tls.md  deployment.md  research-scrapling.md
docs/superpowers/plans/: 2026-05-29-phase1-auth-project-file.md  2026-05-30-phase2-crdt-sync.md  2026-05-30-phase3-ai-relay.md  2026-05-30-phase4-compute.md  2026-05-30-phase5-history.md  2026-05-30-phase6-agent.md  2026-05-31-phase8-tauri-migration.md  2026-05-31-search-redesign-plan.md  2026-06-06-compaction-foundations-plan.md  2026-06-06-permission-foundations-plan.md  2026-06-06-session-persistence-plan.md  2026-06-06-token-grouping-plan.md  2026-06-06-tool-catalog-search-plan.md  2026-06-06-tool-execution-executor-plan.md  2026-06-09-essay-collaborative-editor.md
docs/superpowers/specs/: 2026-05-29-modeler-ai-fullstack-design.md  2026-05-31-search-redesign-design.md  2026-06-04-phase9-tauri-native-ai.md  2026-06-06-claude-code-feature-integration-into-modelerai.md  2026-06-09-essay-collaborative-editor-design.md  2026-06-10-essay-ghost-text-design.md
hooks/: use-agent-status.ts  use-auth.ts  use-project-members.ts  use-screen-share.ts  use-tauri-agent.ts
lib/: api.ts  arena-chat-ws.ts  relative-time.ts  research-to-arena.ts  tauri-api.test-d.ts  tauri-api.ts  wikilink-index.test.ts  wikilink-index.ts  yjs-provider.ts
lib/codemirror/: awareness.ts  comments.ts  ghost-text.ts  live-preview.ts  markdown-shortcuts.ts  theme.ts  wikilinks.ts
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql  002_ai.sql  003_history.sql  004_research.sql  005_research_v2.sql  006_research_v3.sql  008_arena_chat.sql  009_arena_authorship.sql
server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
server/src/agent_bridge/: handlers.rs  registry.rs
server/src/ai/: channel.rs  handlers.rs  mod.rs  model.rs  quota.rs
server/src/ai/adaptor/: anthropic.rs  mod.rs  openai.rs  tavily.rs
server/src/arena/: chat.rs  handlers.rs  markdown.rs  mod.rs  model.rs
server/src/auth/: handlers.rs  middleware.rs  mod.rs  model.rs
server/src/compute/: Dockerfile  executor.rs  handlers.rs  mod.rs  model.rs
server/src/file/: handlers.rs  model.rs
server/src/history/: handlers.rs  model.rs
server/src/morphic/: client.rs  model.rs
server/src/project/: handlers.rs  model.rs
server/src/research/: handlers.rs  mod.rs  model.rs  references.rs
server/src/screen/: handlers.rs
server/src/sync/: handlers.rs  mod.rs  room.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: .gitignore  pyproject.toml  run.py
src-tauri/sidecar/app/: main.py  models.py
src-tauri/sidecar/app/providers/: __init__.py  arxiv.py  geo.py  github.py  kaggle.py  openalex.py  scrapling_search.py  semantic_scholar.py  stealth.py  zenodo.py
src-tauri/sidecar/tests/: test_chain.py  test_geo.py  test_scrapling_search.py  test_stealth.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: commands.rs  events.rs  file_watcher.rs  mod.rs  pty.rs  state.rs
src-tauri/src/ai/: agent.rs  chat.rs  compaction.rs  config.rs  dsml.rs  executor.rs  history.rs  hooks.rs  mod.rs  permissions.rs  philosophy.rs  plan.rs  plugins.rs  research.rs  research_agent.rs  runtime.rs  search.rs  session.rs  sidecar.rs  skills.rs  tasks.rs  tools.rs  workspace.rs
src-tauri/src/ai/tools/: git.rs  mod.rs  question.rs
