[package]
name = "modeler-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
async-trait = "0.1"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
mime_guess = "2"
yrs = "0.19"
tokio-stream = "0.1"
bollard = "0.17"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
