[package]
name = "modeler-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Local workspace services
notify = "7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
claude_code_rs = { path = "../claude-code-rust", default-features = false }

# Server deps for Host Mode (Phase 8e)
modeler-server = { path = "../server" }
