[package]
name = "modeler-desktop"
version = "0.1.0"
edition = "2021"

[features]
default = ["accurate-tokenizer"]
accurate-tokenizer = ["dep:tiktoken-rs"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# HTTP client for tool calls
reqwest = { version = "0.12", features = ["json"] }

# Local workspace services
notify = "7"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
futures = "0.3"
base64 = "0.22"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tiktoken-rs = { version = "0.7", optional = true }
claude_code_rs = { path = "../claude-code-rust", default-features = false }

# Server deps for Host Mode (Phase 8e)
modeler-server = { path = "../server" }
