[project]
name = "modeler-sidecar"
version = "0.1.0"
description = "Academic search sidecar for Modeler AI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "scrapling[fetchers]>=0.4.0",
    "osmnx[neighbors]==2.1.0",
    "shapely>=2.0",
    "pyogrio>=0.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[tool.pytest.ini_options]
markers = [
    "chain: live network + Chromium integration tests (run with: pytest -m chain)",
]
