[project]
name = "modeler-sidecar"
version = "0.1.0"
description = "Academic search sidecar for Modeler AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "scrapling[fetchers]>=0.4.0",
    "shapely>=2.0",
    "geopandas>=1.0.1",
    "networkx>=2.5",
    "numpy>=1.24",
    "pandas>=1.5",
]

# NOTE: osmnx 2.1.0 is NOT on PyPI (latest published is 1.1.1).
# Install from the local clone at ../../osmnx via:
#     py -3 -m pip install -e ../../osmnx[neighbors]
# This brings scikit-learn + scipy transitively for the [neighbors] extra.

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[tool.pytest.ini_options]
markers = [
    "chain: live network + Chromium integration tests (run with: pytest -m chain)",
]
